<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mainInfoFragment2"
        android:title="@string/strUserMenu"
        android:icon="@drawable/trophy_icon"
        />

    <item
        android:id="@+id/cardsFragment2"
        android:title="@string/strCardMenu"
        android:icon="@drawable/card_icon"
        />

    <item
        android:id="@+id/badgesFragment2"
        android:title="@string/strBadgeMenu"
        android:icon="@drawable/badges_icon"
        />

    <item
        android:id="@+id/chestFragment2"
        android:title="@string/strChestMenu"
        android:icon="@drawable/legendary_chest"
        />


</menu>