...
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/strEnterTag"
        android:textAlignment="center"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edTag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintVertical_chainStyle="packed" />

...
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/textViewTag" />

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/strEnter"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
...
