...

    <View
        android:id="@+id/viewSeparator"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#000"
        app:layout_constraintBottom_toTopOf="@+id/rvBadges"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleBadges"
        android:layout_marginBottom="5dp"
        />

...
